app/assets/css/transitions.less
/* text-tile */
.text-tile-transition-group {
  .tile__item {
    position: absolute;
    width: 94%; // FIXME: MAGIC NUMBER. Using 100% width overflowed container, unable to set parent's position relative
  }
}

.text-tile-enter {
  transform: translate(130%, 0) !important;
}

.text-tile-enter-active {
  transform: translate(0, 0) !important;
  transition: transform 500ms ease-out;
  transition-delay: 400ms;
}

.text-tile-leave {
  transform: translate(0, 0) !important;
}

.text-tile-leave-active {
  transform: translate(130%, 0) !important;
  transition: transform 500ms ease-in;
}

.grow-shrink-enter, .grow-shrink-appear {
  transform: scale(0,0);
  &.grow-shrink-enter-active, &.grow-shrink-appear-active {
    transform: scale(1,1);
    transition: transform 200ms ease-out;
  }
}

.grow-shrink-leave {
  transform: scale(1,1);
  &.grow-shrink-leave-active {
    transform: scale(0,0);
    transition: transform 200ms ease-in;
  }
}

